--- a/ws-client/sender.html
+++ b/ws-client/sender.html
@@ -1,104 +1,130 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>WebSockets Sender</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-        background-color: #f5f5f5;
-      }
 
-      h1 {
-        color: #333;
-      }
+<head>
+  <title>WebSockets Sender</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
 
-      button {
-        background-color: #007bff;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        transition-duration: 0.2s;
-        cursor: pointer;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-      }
+    h1 {
+      color: #333;
+    }
 
-      button:hover {
-        background-color: #339af0;
-        color: white;
-      }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      transition-duration: 0.2s;
+      cursor: pointer;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    }
 
-      input[type="text"] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        box-sizing: border-box;
-      }
+    button:hover {
+      background-color: #339af0;
+      color: white;
+    }
 
-      .status {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        color: #333;
-      }
+    input[type="text"] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      box-sizing: border-box;
+    }
 
-      .status-dot {
-        height: 10px;
-        width: 10px;
-        background-color: red;
-        border-radius: 50%;
-        display: inline-block;
-        margin-right: 5px;
-      }
+    .status {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      color: #333;
+    }
 
-      .connected .status-dot {
-        background-color: green;
-      }
+    .status-dot {
+      height: 10px;
+      width: 10px;
+      background-color: red;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 5px;
+    }
 
-      button#connectButton.disconnected {
-        background-color: #007bff; /* Change this to blue */
-      }
+    .connected .status-dot {
+      background-color: green;
+    }
 
-      button#connectButton.connected {
-        opacity: 0.5;
-        background-color: red;
-      }
-    </style>
+    button#connectButton.disconnected {
+      background-color: #007bff;
+      /* Change this to blue */
+    }
 
-    <script>
-      let socket;
+    button#connectButton.connected {
+      opacity: 0.5;
+      background-color: red;
+    }
+  </style>
 
-      function setupWebSocket() {
-        console.log("Attempting to connect to WebSocket server...");
-        userName = document.getElementById("nameInput").value; // Get the name entered by the user
+  <script>
+    let socket;
 
-        // Ensure this matches the server's listening address
-        socket = new WebSocket("ws://127.0.0.1:9001");
+    function setupWebSocket() {
+      console.log("Attempting to connect to WebSocket server...");
+      userName = document.getElementById("nameInput").value; // Get the name entered by the user
 
-        socket.addEventListener("open", (event) => {
-          console.log("WebSocket connection opened:", event);
-          // socket.send("Hello, server!");
-          socket.send(JSON.stringify({ type: "name", user_name: userName }));
+      // Ensure this matches the server's listening address
+      socket = new WebSocket("ws://localhost:9001");
 
-          document.getElementById("messageArea").style.opacity = "1";
-          document.getElementById("connectButton").textContent = "Disconnect";
-          document.getElementById("status").classList.add("connected");
-          document.getElementById("connectButton").classList.add("connected");
-          document
-            .getElementById("connectButton")
-            .classList.remove("disconnected");
-        });
+      socket.addEventListener("open", (event) => {
+        console.log("WebSocket connection opened:", event);
+        // socket.send("Hello, server!");
+        socket.send(JSON.stringify({ type: "name", user_name: userName }));
 
-        socket.addEventListener("close", (event) => {
-          console.log("WebSocket connection closed:", event);
-          document.getElementById("messageArea").style.opacity = "0.4";
+        document.getElementById("messageArea").style.opacity = "1";
+        document.getElementById("connectButton").textContent = "Disconnect";
+        document.getElementById("status").classList.add("connected");
+        document.getElementById("connectButton").classList.add("connected");
+        document
+          .getElementById("connectButton")
+          .classList.remove("disconnected");
+      });
+
+      socket.addEventListener("close", (event) => {
+        console.log("WebSocket connection closed:", event);
+        document.getElementById("messageArea").style.opacity = "0.4";
+        document.getElementById("connectButton").textContent = "Connect";
+        document.getElementById("status").classList.remove("connected");
+        document
+          .getElementById("connectButton")
+          .classList.remove("connected");
+        document
+          .getElementById("connectButton")
+          .classList.add("disconnected");
+      });
+
+      socket.addEventListener("error", (event) => {
+        console.error("WebSocket error:", event);
+        document.getElementById("connectButton").textContent = "Connect";
+        document.getElementById("status").classList.remove("connected");
+        document
+          .getElementById("connectButton")
+          .classList.remove("connected");
+        document
+          .getElementById("connectButton")
+          .classList.add("disconnected");
+      });
+
+      setInterval(function () {
+        if (socket.readyState !== WebSocket.OPEN) {
           document.getElementById("connectButton").textContent = "Connect";
           document.getElementById("status").classList.remove("connected");
           document
@@ -107,101 +133,70 @@
           document
             .getElementById("connectButton")
             .classList.add("disconnected");
-        });
-
-        socket.addEventListener("error", (event) => {
-          console.error("WebSocket error:", event);
-          document.getElementById("connectButton").textContent = "Connect";
-          document.getElementById("status").classList.remove("connected");
-          document
-            .getElementById("connectButton")
-            .classList.remove("connected");
-          document
-            .getElementById("connectButton")
-            .classList.add("disconnected");
-        });
-
-        setInterval(function () {
-          if (socket.readyState !== WebSocket.OPEN) {
-            document.getElementById("connectButton").textContent = "Connect";
-            document.getElementById("status").classList.remove("connected");
-            document
-              .getElementById("connectButton")
-              .classList.remove("connected");
-            document
-              .getElementById("connectButton")
-              .classList.add("disconnected");
-          }
-        }, 2000);
-      }
-
-      function sendMessage() {
-        const messageInput = document.getElementById("messageInput");
-        const message = messageInput.value;
-
-        if (socket && message) {
-          socket.send(JSON.stringify({ type: "message", content: message }));
-
-          messageInput.value = "";
-        } else {
-          console.error(
-            "WebSocket connection not established or empty message"
-          );
         }
+      }, 2000);
+    }
+
+    function sendMessage() {
+      const messageInput = document.getElementById("messageInput");
+      const message = messageInput.value;
+
+      if (socket && message) {
+        socket.send(JSON.stringify({ type: "message", content: message }));
+
+        messageInput.value = "";
+      } else {
+        console.error(
+          "WebSocket connection not established or empty message"
+        );
+      }
+    }
+
+    function getLastMessages() {
+      // Here, you would usually make a request to the server to get the last 5 messages
+      // However, this is not implemented in your server's code
+      // Instead, you could print a message to the console
+      console.log("Getting last 5 messages...");
+    }
+
+    function toggleConnection() {
+      if (document.getElementById("nameInput").value == "") {
+        alert("Please enter a username before Connecting!");
+        return;
       }
 
-      function getLastMessages() {
-        // Here, you would usually make a request to the server to get the last 5 messages
-        // However, this is not implemented in your server's code
-        // Instead, you could print a message to the console
-        console.log("Getting last 5 messages...");
+      if (socket && socket.readyState === WebSocket.OPEN) {
+        socket.close();
+      } else {
+        setupWebSocket();
       }
+    }
+  </script>
+</head>
 
-      function toggleConnection() {
-        if (document.getElementById("nameInput").value == "") {
-          alert("Please enter a username before Connecting!");
-          return;
-        }
+<body>
+  <h1>WebSocket Sender</h1>
+  <div>Connect to the Server and begin sending messages.</div>
 
-        if (socket && socket.readyState === WebSocket.OPEN) {
-          socket.close();
-        } else {
-          setupWebSocket();
-        }
-      }
-    </script>
-  </head>
-  <body>
-    <h1>WebSocket Sender</h1>
-    <div>Connect to the Server and begin sending messages.</div>
+  <h2>User Name</h2>
+  <div style="display: flex; flex-direction: column">
+    <input type="text" id="nameInput" placeholder="Enter your name" style="width: 14rem" />
 
-    <h2>User Name</h2>
-    <div style="display: flex; flex-direction: column">
-      <input
-        type="text"
-        id="nameInput"
-        placeholder="Enter your name"
-        style="width: 14rem"
-      />
+    <button id="connectButton" onclick="toggleConnection()" style="width: 8rem">
+      Connect
+    </button>
+  </div>
+  <div id="messageArea" style="opacity: 0.4">
+    <h2>Send Message</h2>
+    <form onsubmit="event.preventDefault(); sendMessage();">
+      <input type="text" id="messageInput" placeholder="Type your message" />
+      <button type="submit">Send</button>
+    </form>
+  </div>
 
-      <button
-        id="connectButton"
-        onclick="toggleConnection()"
-        style="width: 8rem"
-      >
-        Connect
-      </button>
-    </div>
-    <div id="messageArea" style="opacity: 0.4">
-      <h2>Send Message</h2>
-      <form onsubmit="event.preventDefault(); sendMessage();">
-        <input type="text" id="messageInput" placeholder="Type your message" />
-        <button type="submit">Send</button>
-      </form>
-    </div>
+  <div id="status" class="status">
+    <span class="status-dot"></span> Connection Status
+  </div>
+</body>
 
-    <div id="status" class="status">
-      <span class="status-dot"></span> Connection Status
-    </div>
-  </body>
 </html>
